# datashield

./: .coverage 2  .coverage 3  .coverage 4  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  nox.py  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py  index.rst  modules.rst
examples/: demo_sanitized.json  mcpguard_policy.yaml  sample_dataset.json
src/datashield/: __init__.py  __main__.py  cli.py  config.py  scanner.py  taxonomy.py
src/datashield/compliance/: __init__.py  gdpr.py  hipaa.py  verifier.py
src/datashield/detectors/: __init__.py  pattern_matcher.py  pii_detector.py  presidio_detector.py  secret_scanner.py  sensitive_classifier.py
src/datashield/integrations/: __init__.py  mcpscop.py
src/datashield/policies/: __init__.py  mcpguard.py
src/datashield/privacy/: __init__.py  differential.py  epsilon_calculator.py  k_anonymity.py
src/datashield/reporters/: __init__.py  console.py  html.py  json.py
src/datashield/sanitizers/: __init__.py  anonymizer.py  minimizer.py  redactor.py  transformer.py
src/datashield/utils/: __init__.py  crypto.py
tests/: test_cli.py  test_config.py  test_integrations.py  test_load_data.py  test_policies.py  test_presidio_detector.py  test_reporters.py  test_scanner.py  test_taxonomy.py  test_utils.py
tests/test_compliance/: test_gdpr.py  test_hipaa.py  test_verifier.py
tests/test_detectors/: test_pattern_matcher.py  test_pii_detector.py  test_secret_scanner.py  test_sensitive_classifier.py
tests/test_privacy/: test_differential.py  test_epsilon_calculator.py  test_k_anonymity.py
tests/test_sanitizers/: test_anonymizer.py  test_minimizer.py  test_redactor.py  test_transformer.py
