[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datashield-ai"
version = "0.1.0"
description = "Data sanitization with privacy preservation for AI training"
authors = [{ name = "Carlos-Projects", email = "Carlos@AIAgentObservatory.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "pii", "privacy", "sanitization", "ai-training", "differential-privacy",
    "data-minimization", "gdpr", "hipaa", "compliance", "security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12.0,<1.0.0",
    "rich>=13.0.0,<14.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "regex>=2023.0.0,<2027.0.0",
    "pyyaml>=6.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "sphinx>=7.0",
    "furo>=2024.0",
    "nox>=2024.0",
    "pre-commit>=3.0",
]
presidio = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
]
taxonomy = [
    "mcp-taxonomy>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Carlos-Projects/datashield"
Repository = "https://github.com/Carlos-Projects/datashield"
Issues = "https://github.com/Carlos-Projects/datashield/issues"
Documentation = "https://github.com/Carlos-Projects/datashield"

[project.scripts]
datashield = "datashield.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/datashield"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP006", "UP007"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["datashield"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
